--- a/power_up/index.html
+++ b/power_up/index.html
@@ -8,7 +8,7 @@
 
 	<title>FIRST Power Up: 2018</title>
 
-	<link rel="shortcut icon" href="http://stormbots.github.io/images/gt_favicon.png">
+	<link rel="shortcut icon" href="/images/gt_favicon.png">
 
 	
 	<link href="https://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.no-icons.min.css" rel="stylesheet">
@@ -17,7 +17,7 @@
 	
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Alice|Open+Sans:400,300,700">
 	
-	<link rel="stylesheet" href="http://stormbots.github.io/css/styles.css">
+	<link rel="stylesheet" href="/css/styles.css">
 
 	
 
@@ -31,7 +31,7 @@
 <header id="header">
 	<div id="head" class="parallax" parallax-speed="0">
 		<h1 id="logo" class="text-center">
-			<img src="http://stormbots.github.io/images/guy.png" alt="">
+			<img src="/images/guy.png" alt="">
 			<span class="title"></span>
 			<span class="tagline"><br>
 				<a href=""></a>
@@ -177,7 +177,7 @@ Text about our time in the game. Text about our time in the game. Text about our
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 <script src="https://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
-<script src="http://stormbots.github.io/js/template.js"></script>
+<script src="/js/template.js"></script>
 <script id="dsq-count-scr" src="//hugo-initio-site.disqus.com/count.js" async></script>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
