--- a/content/calendar.html
+++ b/content/calendar.html
@@ -1,9 +1,11 @@
 +++
 description = "Stormbots Events + Practice Schedule"
-title = "Calendar"
+title = ""
 type = "about"
 +++
 <head>
+<h1 style="text-align:center" > <font face="Pullman"> Calendar </h1>
+</br>
 <link rel="stylesheet" href="custom_calendar.css">
 </head>
-<iframe src="https://calendar.google.com/calendar/embed?showTitle=0&amp;showNav=0&amp;showTabs=0&amp;showCalendars=0&amp;showTz=0&amp;height=500&amp;wkst=1&amp;bgcolor=%23000066&amp;src=slmntckf7g570g5dn0pohlfkek%40group.calendar.google.com&amp;color=%231B887A&amp;ctz=America%2FLos_Angeles" style="border:solid 0px #0c0030" width="1100" height="500" frameborder="0" scrolling="no"></iframe>
+<iframe src="https://calendar.google.com/calendar/embed?showTitle=0&amp;showNav=0&amp;showTabs=0&amp;showCalendars=0&amp;showTz=0&amp;height=500&amp;wkst=1&amp;src=slmntckf7g570g5dn0pohlfkek%40group.calendar.google.com&amp;color=%231B887A&amp;ctz=America%2FLos_Angeles" style="border:solid 0px #0c0030" width="1100" height="500" frameborder="0" scrolling="no"></iframe>
