--- a/content/calendar.html
+++ b/content/calendar.html
@@ -1,7 +1,7 @@
 +++
 description = "Stormbots Events + Practice Schedule"
 title = ""
-type = "about"
+type = "general"
 +++
 <head>
 <h1 style="text-align:center" > <font face="Pullman"> Calendar </h1>
