fix calendar CSS

--- a/content/calendar.html
+++ b/content/calendar.html
@@ -6,7 +6,7 @@ type = "general"
 <head>
 <h1 style="text-align:center" > <font face="Pullman"> Calendar </h1>
 </br>
-<link rel="stylesheet" href="custom_calendar.css">
+<link rel="stylesheet" href="/css/custom_calendar.css">
 </head>
 
 
