--- a/content/calendar.html
+++ b/content/calendar.html
@@ -9,6 +9,6 @@ type = "general"
 <link rel="stylesheet" href="/css/custom_calendar.css">
 </head>
 
-
+<p>Please, fill <a href="https://goo.gl/forms/FolR2oQi8Sa4vxHX2">this form</a> if you will be late, absent or leaving early</p>
 
 <iframe src="https://calendar.google.com/calendar/embed?showTitle=0&amp;showNav=1&amp;showTabs=0&amp;showCalendars=0&amp;showTz=0&amp;height=500&amp;wkst=1&amp;src=slmntckf7g570g5dn0pohlfkek%40group.calendar.google.com&amp;color=%231B887A&amp;ctz=America%2FLos_Angeles" style="border:solid 0px #0c0030" width="1100" height="500" frameborder="0" scrolling="no"></iframe>
