--- a/content/calendar.html
+++ b/content/calendar.html
@@ -4,7 +4,7 @@ title = ""
 type = "general"
 +++
 <head>
-<h1 style="text-align:center" > <font face="Pullman"> Calendar </h1>
+<h1 style="text-align:center" >Calendar </h1>
 </br>
 <link rel="stylesheet" href="/css/custom_calendar.css">
 </head>
