--- a/static/admin/index.html
+++ b/static/admin/index.html
@@ -17,6 +17,7 @@
         var bg = this.props.getAsset(image);
         return h('div', {},
           h('h1', {}, entry.getIn(['data', 'title'])),
+          h('h3', {}, entry.getIn(['data', 'date'])),
           h('img', {src: bg.toString()}),
           h('div', {"className": "text"}, this.props.widgetFor('body'))
         );
