--- a/static/admin/index.html
+++ b/static/admin/index.html
@@ -8,7 +8,7 @@
 <body>
   <!-- Include the script that builds the page and powers Netlify CMS -->
   <script src="https://unpkg.com/netlify-cms@^2.0.0/dist/netlify-cms.js"></script>
-
+  <script src='/cms.js'></script>
   <script>
     var PostPreview = createClass({
       render: function() {
@@ -25,6 +25,26 @@
     });
     
     CMS.registerPreviewTemplate("posts", PostPreview);
+    CMS.registerEditorComponent({
+      id: "youtube",
+      label: "Youtube",
+      icon: 'video',
+      fields: [{name: 'id', label: 'Youtube Video ID'}],
+      pattern: /^{{<\s?youtube (\S+)\s?>}}/,
+      fromBlock: function(match) {
+        return {
+          id: match[1]
+        };
+      },
+      toBlock: function(obj) {
+        return '{{< youtube ' + obj.id + ' >}}';
+      },
+      toPreview: function(obj) {
+        return (
+          '<img src="http://img.youtube.com/vi/' + obj.id + '/maxresdefault.jpg" alt="Youtube Video"/>'
+        );
+      }
+    });
     </script>
 
 </body>
