--- a/static/admin/index.html
+++ b/static/admin/index.html
@@ -1,26 +1,28 @@
 <!doctype html>
 <html>
+
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Content Manager</title>
 </head>
+
 <body>
   <!-- Include the script that builds the page and powers Netlify CMS -->
   <script src="https://unpkg.com/netlify-cms@^2.0.0/dist/netlify-cms.js"></script>
- 
+
   <script>
     var PostPreview = createClass({
-      render: function() {
+      render: function () {
         var entry = this.props.entry;
         return h('div', {},
           h('h1', {}, entry.getIn(['data', 'title'])),
           h('h3', {}, entry.getIn(['data', 'date'])),
-          h('div', {"className": "text"}, this.props.widgetFor('body'))
+          h('div', { "className": "text" }, this.props.widgetFor('body'))
         );
       }
     });
-    
+
     CMS.registerPreviewTemplate("posts2018", PostPreview);
     CMS.registerPreviewTemplate("posts2019", PostPreview);
 
@@ -28,23 +30,55 @@
       id: "youtube",
       label: "Youtube",
       icon: 'video',
-      fields: [{name: 'id', label: 'Youtube Video ID'}],
+      fields: [{ name: 'id', label: 'Youtube Video ID' }],
       pattern: /^{{<\s?youtube (\S+)\s?>}}/,
-      fromBlock: function(match) {
+      fromBlock: function (match) {
         return {
           id: match[1]
         };
       },
-      toBlock: function(obj) {
+      toBlock: function (obj) {
         return '{{< youtube ' + obj.id + ' >}}';
       },
-      toPreview: function(obj) {
+      toPreview: function (obj) {
         return (
           '<img src="http://img.youtube.com/vi/' + obj.id + '/maxresdefault.jpg" alt="Youtube Video"/>'
         );
       }
     });
-    </script>
+
+
+    var GeneralPreview = createClass({
+      // Object fields are simpler than lists - instead of `widgetsFor` returning
+      // an array of objects, it returns a single object. Accessing the shape of
+      // that object is the same as the shape of objects returned for list fields:
+      //
+      // {
+      //   data: { front_limit: 0, author: 'Chris' },
+      //   widgets: { front_limit: (<WidgetComponent>), author: (WidgetComponent>)}
+      // }
+      render: function () {
+        var entry = this.props.entry;
+        var title = entry.getIn(['data', 'site_title']);
+        var posts = entry.getIn(['data', 'posts']);
+
+        return h('div', {},
+          h('h1', {}, title),
+          h('dl', {},
+            h('dt', {}, 'Posts on Frontpage'),
+            h('dd', {}, this.props.widgetsFor('posts').getIn(['widgets', 'front_limit']) || 0),
+
+            h('dt', {}, 'Default Author'),
+            h('dd', {}, this.props.widgetsFor('posts').getIn(['data', 'author']) || 'None'),
+          )
+        );
+      }
+    });
+
+    CMS.registerPreviewTemplate("general", GeneralPreview);
+
+  </script>
 
 </body>
+
 </html>
