--- a/static/admin/index.html
+++ b/static/admin/index.html
@@ -23,6 +23,7 @@
       }
     });
 
+    CMS.registerPreviewStyle("/styles.css");
     CMS.registerPreviewTemplate("posts2018", PostPreview);
     CMS.registerPreviewTemplate("posts2019", PostPreview);
 
