--- a/static/admin/index.html
+++ b/static/admin/index.html
@@ -14,6 +14,8 @@
   <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 
   <script>
+    CMS.registerPreviewStyle("/css/styles.css");
+
     var PostPreview = createClass({
       render: function () {
         var entry = this.props.entry;
