--- a/static/admin/index.html
+++ b/static/admin/index.html
@@ -14,7 +14,20 @@
   <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 
   <script>
-    CMS.registerPreviewStyle("/css/styles.css");
+    CMS.registerPreviewStyle("/static/css/styles.css");
+
+    var PostPreview = createClass({
+      render: function () {
+        var entry = this.props.entry;
+        return h('div', {},
+          h('h1', {}, entry.getIn(['data', 'title'])),
+          h('div', { "className": "text" }, this.props.widgetFor('body'))
+        );
+      }
+    });
+
+    CMS.registerPreviewTemplate("posts2018", PostPreview);
+    CMS.registerPreviewTemplate("posts2019", PostPreview);
 
     CMS.registerEditorComponent({
       id: "youtube",
