--- a/static/admin/index.html
+++ b/static/admin/index.html
@@ -14,7 +14,7 @@
   <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 
   <script>
-    CMS.registerPreviewStyle("/static/css/styles.css");
+    CMS.registerPreviewStyle("/css/styles.css");
 
     var PostPreview = createClass({
       render: function () {
